[gd_scene load_steps=2 format=3 uid="uid://rimw3l2hs7n0"]

[ext_resource type="Script" uid="uid://des8nan2krgot" path="res://scripts/ui/TimeControls.gd" id="1_qdyty"]

[node name="TimeControls" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 40.0
script = ExtResource("1_qdyty")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.15, 0.5)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PauseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 25.0
offset_bottom = 35.0
text = "⏸"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 5.0
offset_right = 50.0
offset_bottom = 35.0
text = "▶"

[node name="FastButton" type="Button" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 5.0
offset_right = 75.0
offset_bottom = 35.0
text = "⏩"

[node name="UltrafastButton" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 5.0
offset_right = 100.0
offset_bottom = 35.0
text = "⏭"
